--- a/styles/architects.css
+++ b/styles/architects.css
@@ -10,11 +10,11 @@
 
 .btn-primary {
     color: #FFF;
-    font-size: 20px;
+    font-size: 1.25rem;
     font-weight: 600;
     border-radius: 5px;
     background: #FF900E;
-    padding: 13px 20px;
+    padding: 15px 25px;
     border: 0;
     cursor: pointer;
 }
@@ -33,7 +33,7 @@ nav {
 
 .nav-title {
     color: #131313;
-    font-size: 2rem;
+    font-size: 2.5rem;
     font-weight: 700;
 }
 
@@ -43,7 +43,7 @@ nav>ul {
 
 nav li {
     list-style: none;
-    margin-left: 30px;
+    margin-right: 30px;
     font-weight: 500;
     font-size: 1rem;
 }
@@ -73,4 +73,30 @@ nav li a {
     line-height: 26px;
 }
 
-img {}
+.banner img {
+    margin-top: 20px;
+    width: 100%;
+}
+
+/* responsive media query for header */
+/* mobile devices */
+@media screen and (max-width:576px) {
+    header {
+        padding: 20px;
+    }
+
+    nav {
+        flex-direction: column;
+    }
+}
+
+/* tablet or medium devices*/
+@media screen and (min-width:577px) and (max-width:960px) {
+    header {
+        padding: 50px;
+    }
+
+    nav {
+        flex-direction: column;
+    }
+}
