--- a/styles/architects.css
+++ b/styles/architects.css
@@ -6,6 +6,8 @@
     font-family: 'Lato', sans-serif;
     font-family: 'Open Sans', sans-serif;
     font-family: 'Work Sans', sans-serif;
+    /* margin: 0;
+    padding: 0; */
 }
 
 .btn-primary {
@@ -22,7 +24,7 @@
 /* header styles */
 header {
     background: rgba(255, 144, 14, 0.10);
-    padding: 30px 240px;
+    padding: 30px 150px;
 }
 
 nav {
@@ -99,4 +101,53 @@ nav li a {
     nav {
         flex-direction: column;
     }
+}
+
+/* main styles */
+main {
+    max-width: 1240px;
+    margin: 0 auto;
+}
+
+.teams-container {
+    display: flex;
+    align-items: center;
+}
+
+.teams-img-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1.5rem;
+}
+
+.teams-content {
+    padding-right: 30px;
+    padding-left: 50px;
+}
+
+.teams-title {
+    font-size: 2.5rem;
+}
+
+.Quick-list {
+    color: #727272;
+    font-weight: 500;
+}
+
+.of-Our {
+    color: #131313;
+    font-weight: 700;
+
+}
+
+.Features {
+    color: #FF900E;
+    font-weight: 700;
+}
+
+.teams-discription {
+    color: #727272;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 26px;
 }
