--- a/styles/architects.css
+++ b/styles/architects.css
@@ -26,6 +26,12 @@
     font-weight: 400;
     line-height: 26px;
 }
+.section-title {
+    color: #131313;
+    font-size: 2.5rem;
+    font-weight: 700;
+}
+
 /* header styles */
 header {
     background: rgba(255, 144, 14, 0.10);
@@ -38,11 +44,7 @@ nav {
     align-items: center;
 }
 
-.nav-title {
-    color: #131313;
-    font-size: 2.5rem;
-    font-weight: 700;
-}
+
 
 nav>ul {
     display: flex;
