--- a/styles/architects.css
+++ b/styles/architects.css
@@ -20,12 +20,14 @@
     border: 0;
     cursor: pointer;
 }
+
 .text-light-gray {
     color: #727272;
     font-size: 1.1rem;
     font-weight: 400;
     line-height: 26px;
 }
+
 .section-title {
     color: #131313;
     font-size: 2.5rem;
@@ -124,6 +126,30 @@ main {
     font-weight: 700;
 }
 
+/* facts section style */
+.facts-card-container {
+    display: flex;
+    justify-content: space-around;
+
+}
+.facts-card-container .card {
+    border-radius: 8px;
+    border: 1px solid #FF900E;
+    text-align: center;
+    padding: 30px;
+}
+.facts-card-container .card-title{
+    font-weight: 600;
+    color: #727272;
+    font-size: 1.25rem;
+    margin-top: 5px;
+}
+.facts-card-container .card-stats{
+    font-size: 2rem;
+    color: #424242;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
 
 
 
@@ -140,13 +166,14 @@ main {
     }
 
     nav,
-    .teams-container
-    {
+    .teams-container {
         flex-direction: column;
     }
-    .teams-img-container{
+
+    .teams-img-container {
         grid-template-columns: 1fr;
     }
+
     .teams-content {
         padding-right: 15px;
         padding-left: 20px;
@@ -159,8 +186,8 @@ main {
         padding: 50px;
     }
 
-    nav, .teams-container {
+    nav,
+    .teams-container {
         flex-direction: column;
     }
 }
-
