added the sponsors

--- a/styles/architects.css
+++ b/styles/architects.css
@@ -127,33 +127,51 @@ main {
 }
 
 /* facts section style */
+.facts-container{
+    text-align: center;
+}
 .facts-card-container {
     display: flex;
     justify-content: space-around;
 
 }
+
 .facts-card-container .card {
     border-radius: 8px;
     border: 1px solid #FF900E;
     text-align: center;
     padding: 30px;
 }
-.facts-card-container .card-title{
+
+.facts-card-container .card-title {
     font-weight: 600;
     color: #727272;
     font-size: 1.25rem;
     margin-top: 5px;
 }
-.facts-card-container .card-stats{
+
+.facts-card-container .card-stats {
     font-size: 2rem;
     color: #424242;
     margin-top: 10px;
     margin-bottom: 10px;
 }
 
+/* Sponsors style section */
+.Sponsors-container{
+    text-align: center;
+}
+.sponsors-img-container{
+    margin-top: 50px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 40px;
+}
+.sponsors-img-container img{
+    width: 165px;
 
-
-
+}
 
 
 
@@ -166,7 +184,10 @@ main {
     }
 
     nav,
-    .teams-container {
+    .teams-container,
+    .facts-card-container, 
+    .sponsors-img-container
+    {
         flex-direction: column;
     }
 
@@ -174,9 +195,16 @@ main {
         grid-template-columns: 1fr;
     }
 
-    .teams-content {
+    .teams-content,
+    .facts-card-container,
+    .sponsors-img-container
+    {
         padding-right: 15px;
         padding-left: 20px;
+    }
+
+    .facts-card-container {
+        gap: 20px;
     }
 }
 
@@ -187,7 +215,9 @@ main {
     }
 
     nav,
-    .teams-container {
+    .teams-container,
+    .sponsors-img-container
+    {
         flex-direction: column;
     }
 }
