--- a/styles/architects.css
+++ b/styles/architects.css
@@ -126,10 +126,45 @@ main {
     font-weight: 700;
 }
 
+/* features section style */
+
+.features-container {
+    margin-top: 130px;
+    display: flex;
+    gap: 100px;
+}
+
+.features-container .section-title {
+    border-radius: 8px;
+    border-left: 5px solid #FF900E;
+    padding-left: 20px;
+}
+
+.feature-content .card {
+    padding: 10px 20px;
+    margin-bottom: 15px;
+    border-radius: 8px;
+    background: #FFF;
+    box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.06);
+}
+
+.ten-years-badge {
+    border-radius: 5px;
+    background: #FF900E;
+    color: #FFF;
+    width: 342px;
+    padding: 40px;
+}
+
+.ten-years-badge h2 {
+    font-size: 3rem;
+}
+
 /* facts section style */
-.facts-container{
+.facts-container {
     text-align: center;
 }
+
 .facts-card-container {
     display: flex;
     justify-content: space-around;
@@ -158,17 +193,19 @@ main {
 }
 
 /* Sponsors style section */
-.Sponsors-container{
+.Sponsors-container {
     text-align: center;
 }
-.sponsors-img-container{
+
+.sponsors-img-container {
     margin-top: 50px;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     gap: 40px;
 }
-.sponsors-img-container img{
+
+.sponsors-img-container img {
     width: 165px;
 
 }
@@ -185,9 +222,8 @@ main {
 
     nav,
     .teams-container,
-    .facts-card-container, 
-    .sponsors-img-container
-    {
+    .facts-card-container,
+    .sponsors-img-container {
         flex-direction: column;
     }
 
@@ -197,8 +233,7 @@ main {
 
     .teams-content,
     .facts-card-container,
-    .sponsors-img-container
-    {
+    .sponsors-img-container {
         padding-right: 15px;
         padding-left: 20px;
     }
@@ -216,8 +251,7 @@ main {
 
     nav,
     .teams-container,
-    .sponsors-img-container
-    {
+    .sponsors-img-container {
         flex-direction: column;
     }
 }
