--- a/styles/architects.css
+++ b/styles/architects.css
@@ -131,7 +131,7 @@ main {
 .features-container {
     margin-top: 130px;
     display: flex;
-    gap: 100px;
+    gap: 30px;
 }
 
 .features-container .section-title {
@@ -148,16 +148,31 @@ main {
     box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.06);
 }
 
+.feature-image-container img {
+    height: 90%;
+    margin-left: 50px;
+
+}
+
 .ten-years-badge {
     border-radius: 5px;
     background: #FF900E;
     color: #FFF;
-    width: 342px;
-    padding: 40px;
+    width: 230px;
+    padding: 25px;
+    text-align: center;
+    position: relative;
+    bottom: 100px;
+
 }
 
 .ten-years-badge h2 {
     font-size: 3rem;
+    margin: 0;
+}
+
+.ten-years-badge p {
+    font-size: 1.5rem;
 }
 
 /* facts section style */
@@ -210,6 +225,23 @@ main {
 
 }
 
+/* footer style */
+footer {
+    text-align: center;
+    margin: 0 50px;
+    border-radius: 8px;
+    background: #FFF4E7;
+
+}
+
+footer p {
+    padding: 30px;
+
+    color: #424242;
+    font-size: 1.25rem;
+    font-weight: 400;
+}
+
 
 
 
@@ -222,9 +254,15 @@ main {
 
     nav,
     .teams-container,
+    .features-container,
     .facts-card-container,
     .sponsors-img-container {
         flex-direction: column;
+    }
+
+    .features-container img {
+        width: 100%;
+        margin-left: 0;
     }
 
     .teams-img-container {
@@ -251,6 +289,7 @@ main {
 
     nav,
     .teams-container,
+    .features-container,
     .sponsors-img-container {
         flex-direction: column;
     }
